<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".Activity.FirstFourActivity">

    <RelativeLayout
        android:id="@+id/relative_img"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_155sdp"
        android:background="@drawable/bg">

        <ImageView
            android:id="@+id/mImageView"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_110sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_20sdp"
            android:src="@drawable/vec_shape_5_5_5"
            tools:ignore="ContentDescription" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/relative_img"
        android:overScrollMode="never"
        android:paddingLeft="@dimen/_10sdp"
        android:paddingRight="@dimen/_10sdp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_20sdp" />

            <RadioGroup
                android:id="@+id/rg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@id/rb_length"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_length"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@drawable/bg_rb"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/ByLength"
                    android:textColor="@color/colorText" />

                <RadioButton
                    android:id="@+id/rb_weight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@drawable/bg_rb"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/ByWeight"
                    android:textColor="@color/colorText" />
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_layout_No"
                style="@style/MyTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp">

                <EditText
                    android:id="@+id/edt_No"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:hint="@string/No"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:singleLine="true"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/_12sdp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_layout_Length"
                style="@style/MyTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp">

                <EditText
                    android:id="@+id/edt_Length"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:hint="@string/Length"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/txt_Unit_Length"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:alpha="0.5"
                    android:gravity="end"
                    android:text="@string/Unit_Meter"
                    android:textColor="@color/colorText" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_layout_Weight"
                style="@style/MyTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:visibility="gone">

                <EditText
                    android:id="@+id/edt_Weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:hint="@string/Weight"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/txt_Unit_Weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:alpha="0.5"
                    android:gravity="end"
                    android:text="@string/Unit_kg"
                    android:textColor="@color/colorText" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal"
                tools:ignore="DisableBaselineAlignment">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txt_layout_Quantity"
                    style="@style/MyTextInputLayoutStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/edt_Quantity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:hint="@string/Quantity"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:inputType="numberDecimal"
                        android:maxLength="10"
                        android:singleLine="true"
                        android:text="1.0"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/_12sdp"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:alpha="0.5"
                        android:gravity="end"
                        android:text="@string/pcs"
                        android:textColor="@color/colorText" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txt_layout_Price_per_1_kg"
                    style="@style/MyTextInputLayoutStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/edt_Price_per_1_kg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:hint="@string/Price_per_1_kg"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:inputType="numberDecimal"
                        android:maxLength="10"
                        android:singleLine="true"
                        android:text="0.0"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/_12sdp"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:alpha="0.5"
                        android:gravity="end"
                        android:text="@string/Indian_Rupee_Symbol"
                        android:textColor="@color/colorText" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_250sdp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_Calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/bg_shadow"
        android:text="@string/GetResult"
        android:textColor="@color/colorWhite"
        android:textStyle="bold" />
</RelativeLayout>