<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg"
            android:padding="@dimen/_10sdp"
            android:text="@string/Add_Material"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:overScrollMode="never"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_10sdp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txt_layout_Name"
                    style="@style/MyTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edt_Name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:hint="@string/Material_Name"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:nextFocusDown="@id/edt_D1"
                        android:singleLine="true"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/_12sdp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txt_layout_D1"
                    style="@style/MyTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp">

                    <EditText
                        android:id="@+id/edt_D1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:hint="@string/standard_density_1"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:inputType="numberDecimal"
                        android:maxLength="10"
                        android:nextFocusDown="@id/edt_D2"
                        android:singleLine="true"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/_12sdp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txt_layout_D2"
                    style="@style/MyTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp">

                    <EditText
                        android:id="@+id/edt_D2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:hint="@string/standard_density_2"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:inputType="numberDecimal"
                        android:maxLength="10"
                        android:nextFocusDown="@id/edt_D3"
                        android:singleLine="true"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/_12sdp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txt_layout_D3"
                    style="@style/MyTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp">

                    <EditText
                        android:id="@+id/edt_D3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:hint="@string/standard_density_3"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:inputType="numberDecimal"
                        android:maxLength="10"
                        android:nextFocusDown="@id/edt_D4"
                        android:singleLine="true"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/_12sdp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txt_layout_D4"
                    style="@style/MyTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp">

                    <EditText
                        android:id="@+id/edt_D4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:hint="@string/standard_density_4"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:inputType="numberDecimal"
                        android:maxLength="10"
                        android:nextFocusDown="@id/edt_D5"
                        android:singleLine="true"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/_12sdp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txt_layout_D5"
                    style="@style/MyTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp">

                    <EditText
                        android:id="@+id/edt_D5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:hint="@string/standard_density_5"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:inputType="numberDecimal"
                        android:maxLength="10"
                        android:singleLine="true"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/_12sdp" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/bg_shadow"
            android:text="@string/Add"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>